--- a/trabalho aula 5/estilo.css
+++ b/trabalho aula 5/estilo.css
@@ -4,7 +4,7 @@
 @keyframes slidein {
   from {
 
-    margin: 75px 50px 20px 750px;
+    margin: 75px 50px 750px 50px;
 
   
 
@@ -23,6 +23,31 @@
   
 }
 
+@keyframes slidein1 {
+  from {
+
+    color:aqua;
+
+   font-size: 32px;
+   padding: 0px 20px 0px 20px;
+    
+  }
+
+  to {
+  
+   color:black;
+
+font-size: 25px;
+    
+  }
+
+
+  
+}
+
+
+
+
 
 body {
 
@@ -33,6 +58,9 @@ body {
   image-resolution: 100%;
   background-size: 100%;
   font-family: 'Sigmar', cursive;
+  animation-duration: 9.3s;
+  animation-name: slidein2;
+
 
 }
 
@@ -101,4 +129,25 @@ h1 {
   margin: 0px 65px 0px 65px;
   border-radius: 20px;
   padding: 0px 10px 0px 10px;
+  animation-duration: 5.7s;
+  animation-name: slidein1;
+
+  
+}
+
+.links {
+  text-decoration: none;
+  font-family: 'Sigmar';
+  align-items: center;
+  text-align: center;
+  font-size: 25px;
+  color: rgb(2, 2, 2);
+  list-style: none;
+  background-color: rgb(255, 255, 255);
+  margin: 0px 65px 0px 65px;
+  border-radius: 20px;
+  padding: 0px 10px 0px 10px;
+
+
+
 }
